<resources>
    <string name="app_name">Tara</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="facebook_app_id">1620119238238138</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="logo">logo</string>
    <string name="sign_up">Signup</string>
    <string name="explore">Explore</string>
    <string name="hint_first_name">Fist Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_up">Signup</string>
    <string name="prompt_username">Username</string>
    <string name="nav_categories_title">Categories</string>
    <string name="nav_search_title">Search</string>
    <string name="nav_trending_title">Trending</string>
    <string name="nav_favorites_title">Favorites</string>
    <string name="nav_recently_viewed_title">Recently Viewed</string>
    <string name="nav_check_ins_title">Check Ins</string>
    <string name="nav_reviews_title">Reviews</string>
    <string name="nav_add_business_title">Add a Business</string>
    <string name="nav_my_business_title">My Business</string>
    <string name="nav_settings_title">Settings</string>
    <string name="nav_report_bug_title">Report a Bug</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search for (Foods, Stores, etc)</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">Search</string>
    <string name="title_activity_business_item_detail">BusinessItemDetailActivity</string>
</resources>
